--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -19,44 +19,70 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/recipe_info_Image"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:scaleType="centerCrop" />
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/gradient"/>
+                android:orientation="vertical">
 
-            <ImageButton
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/star_dark"
-                android:id="@+id/recipe_info_FavouriteButton" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="6"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/recipe_info_Image"
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:scaleType="centerCrop" />
 
-            <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <ImageButton
-                    android:id="@+id/recipe_info_ShowIngredients"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="right"
-                    android:background="@drawable/arrow_up"/>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/gradient"/>
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:background="@color/black">
+
+                    <ImageButton
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/star_dark"
+                        android:id="@+id/recipe_info_FavouriteButton" />
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7"/>
+
+                    <ImageButton
+                        android:id="@+id/recipe_info_ShowIngredients"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/arrow_up"/>
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
                     android:layout_gravity="bottom"
-                    android:layout_height="50dp">
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@color/black">
                     <TextView
                         android:textSize="20sp"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -64,7 +90,7 @@
                         android:id="@+id/recipe_info_Calories"/>
                     <TextView
                         android:textSize="20sp"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -72,7 +98,7 @@
                         android:id="@+id/recipe_info_TotalTime"/>
                     <TextView
                         android:textSize="20sp"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -80,8 +106,9 @@
                         android:id="@+id/recipe_info_Ingredients"/>
                 </LinearLayout>
 
+            </LinearLayout>
 
-            </FrameLayout>
+
         </FrameLayout>
 
         <LinearLayout
