--- a/app/src/main/res/layout/activity_your_ingredients.xml
+++ b/app/src/main/res/layout/activity_your_ingredients.xml
@@ -37,14 +37,15 @@
                             android:textSize="30sp"
                             android:textColor="@color/darkBlue"/>
                         <LinearLayout
-                            android:layout_weight="0.3"
+                            android:layout_weight="0.2"
                             android:orientation="horizontal"
                             android:layout_width="match_parent"
                             android:layout_height="0dp">
                             <EditText
                                 android:id="@+id/shoppingList_SpecificIngredient"
-                                android:hint="Add specific ingredient?"
+                                android:hint="Add custom ingredient"
                                 android:lines="1"
+                                android:maxLines="1"
                                 android:textSize="18sp"
                                 android:layout_weight="3"
                                 android:layout_width="0dp"
@@ -52,7 +53,9 @@
                             <Button
                                 android:id="@+id/shoppingList_AddSpecIngredientButton"
                                 android:text="ADD"
+                                android:background="@drawable/profile_confirm_button"
                                 android:layout_width="0dp"
+                                android:textSize="25sp"
                                 android:layout_weight="1"
                                 android:layout_height="match_parent" />
                         </LinearLayout>
@@ -66,17 +69,19 @@
                             android:layout_margin="20dp"
                             android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
-                                <Button
-                                    android:layout_marginRight="20dp"
-                                    android:layout_width="0dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_weight="1"
-                                    android:layout_gravity="center"
-                                    android:background="@drawable/profile_confirm_button"
-                                    android:id="@+id/yourIngredients_addToFridgeButton"
-                                    android:text="Buy selected"
-                                    android:textSize="15sp"/>
-                                <Button
+
+                            <Button
+                                android:layout_marginRight="20dp"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:layout_gravity="center"
+                                android:background="@drawable/profile_confirm_button"
+                                android:id="@+id/yourIngredients_addToFridgeButton"
+                                android:text="Buy selected"
+                                android:textSize="15sp"/>
+
+                            <Button
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="match_parent"
