--- a/app/src/main/res/layout/activity_recipe_ingredients_info.xml
+++ b/app/src/main/res/layout/activity_recipe_ingredients_info.xml
@@ -18,43 +18,42 @@
         android:textSize="35sp"
         android:textColor="@color/white"
         android:layout_height="wrap_content" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_weight="1"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="bottom">
+            android:layout_weight="2"
+            android:id="@+id/ingredients_creator"
+            android:textSize="25sp"
+            android:lines="2"
+            android:textColor="@color/white"/>
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="4"
-                android:id="@+id/ingredients_creator"
-                android:textSize="25sp"
-                android:lines="2"
-                android:textColor="@color/white"/>
-
-            <RatingBar
-                android:numStars="5"
-                android:id="@+id/rating"
-                android:isIndicator="true"
-                android:stepSize="0.5"
-                android:max="5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/recipeIngredients_recipeImage"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent" />
+
     </LinearLayout>
+
+
+    <RatingBar
+        android:numStars="5"
+        android:id="@+id/rating"
+        android:isIndicator="true"
+        android:stepSize="0.5"
+        android:max="5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_weight="3"
