--- a/app/src/main/res/layout/activity_nutritions.xml
+++ b/app/src/main/res/layout/activity_nutritions.xml
@@ -19,7 +19,7 @@
         android:typeface="serif"
         android:gravity="center"
         android:textColor="@color/lightBlue"
-        android:text="Nutritions per one serving"/>
+        android:text="Nutrition values per serving"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
