--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -190,6 +190,14 @@
                             android:layout_weight="1"
                             android:layout_margin="5dp"/>
                     </LinearLayout>
+                    <TextView
+                        android:background="@color/black"
+                        android:layout_width="match_parent"
+                        android:text="Recent Searches"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"/>
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
