--- a/app/src/main/res/layout/activity_recyclelist.xml
+++ b/app/src/main/res/layout/activity_recyclelist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <FrameLayout
@@ -11,6 +12,7 @@
         <RelativeLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
+            android:id="@+id/recycle_list_blabla"
             android:layout_height="match_parent"
             android:background="@color/black">
 
