--- a/app/src/main/res/layout/activity_your_ingredients.xml
+++ b/app/src/main/res/layout/activity_your_ingredients.xml
@@ -42,6 +42,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp">
                             <EditText
+                                android:f
                                 android:id="@+id/shoppingList_SpecificIngredient"
                                 android:hint="Add custom ingredient"
                                 android:lines="1"
