--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="3"
                     android:layout_height="match_parent"
-                    android:text="Right for next"
+                    android:text="NEXT"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:gravity="center"/>
